added safe application - vulns fixed

--- a/project_1/application/facefive/app/templates/edit_post.html
+++ b/project_1/application/facefive/app/templates/edit_post.html
@@ -11,6 +11,7 @@
         </div>
         <div class="col-6 bg-secondary">
             <form class="mb-3" action="/edit_post" method="post">
+              <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
               <fieldset>
                 <legend>Edit the Content for your post</legend>
                 <hr class="half-rule" color="grey" />
