--- a/project_1/application/facefive/app/templates/create_post.html
+++ b/project_1/application/facefive/app/templates/create_post.html
@@ -10,7 +10,8 @@
         <div class="col-3">
         </div>
         <div class="col-6 bg-secondary">
-            <form class="mb-3" action="/create_post" method="post">
+            <form class="mb-3" action="/create_post" method="post" role="form">
+              <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
               <fieldset>
                 <legend>Insert the Content for your post</legend>
                 <hr class="half-rule" color="grey" />
