--- a/project_1/application/facefive/app/templates/home.html
+++ b/project_1/application/facefive/app/templates/home.html
@@ -27,9 +27,10 @@
 {% for post in posts %}
   <!-- post -->
   <div class="row border border-dark rounded ml-1 mr-1" style="border-width:2px !important;">
-                <a class="ml-2 mr-2 mt-1 mb-1"><h4><img src = {{ photos_folder + post.photo}} alt="" width="50" height="50">{{ post.author }} : {{ post.name }} 
+                <a class="ml-2 mr-2 mt-1 mb-1"><h4><img src = "{{ photos_folder + post.photo}}" alt="" width="50" height="50">{{ post.author }} : {{ post.name }} 
                     {% if post.author == current_user.username %}
                     <form class="form-horizontal" action="/edit_post" method="get">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                         <input type="hidden" name="id" value= {{ post.id }} /> 
                         <button type="submit" class="btn btn-success">Edit this post</button>
                     </form>
